<resources>
    <string name="IDS_REMOTE_INTERRUPTED_RECORDING_MOVIE_BY_CAMERA">Recording canceled.</string>
    <string name="IDS_REMOTE_NOT_START_REMOTE_BY_BATTERY">Low battery; cannot start remote photography.</string>
    <string name="IDS_REMOTE_NOT_START_REMOTE_BY_EXPOSURE_MODE">Incompatible shooting mode selected; cannot start remote photography. Select mode P, S, A, or M.</string>
    <string name="IDS_REMOTE_NOT_START_REMOTE_BY_LIVEVIEW_ON">Cannot start remote photography. Check the camera. Remote photography cannot be used while live view is active on the camera or the camera shooting is in progress.</string>
    <string name="IDS_REMOTE_NOT_START_REMOTE_BY_MEMORY_CARD">Cannot start remote photography. Check the memory card.</string>
    <string name="IDS_REMOTE_NOT_START_REMOTE_BY_POWER_OFF">Camera signal lost.</string>
    <string name="IDS_REMOTE_NOT_START_REMOTE_BY_TEMPERATURE">Cannot start remote photography. Wait for the camera or wireless mobile adapter to cool.</string>
    <string name="IDS_REMOTE_NOT_START_REMOTE_BY_ZOOM_LENS">Cannot start remote photography. Lens retracted.</string>
    <string name="MID_ABOUT_BOKEH_BLUR">Bokeh and Motion Blur</string>
    <string name="MID_ABOUT_BOKEH_BLUR_DESC">The camera automatically adjusts bokeh and motion blur.</string>
    <string name="MID_ACCESS_LOCATION_PRECISE">You will next be prompted to provide permission to access location data. Select “Precise” to allow access your device’s precise location.</string>
    <string name="MID_ADOBEANALYTICS_TERMS_OF_SERVICE_AGREEMENT_CHECK">Agree to use of Adobe Analytics</string>
    <string name="MID_ADOBEANALYTICS_TERMS_OF_SERVICE_AGREEMENT_OFF">Decline</string>
    <string name="MID_ADOBEANALYTICS_TERMS_OF_SERVICE_AGREEMENT_ON">Accept</string>
    <string name="MID_ADOBEANALYTICS_TERMS_OF_SERVICE_DESC">This app uses Adobe Analytics to help analyze usage data. %s</string>
    <string name="MID_ADOBEANALYTICS_TERMS_OF_SERVICE_ITEM">Analyze usage data</string>
    <string name="MID_ALERT_CANT_CONNECT_TO_CAMERA">The camera is busy. Try connecting again after ending video recording or playback.</string>
    <string name="MID_ALERT_CANT_CONNECT_TO_CAMERA_PLEASE_CAMERA_ON">Shooting settings cannot be uploaded to the camera. Turn the camera on, ready the camera to shoot, and try again.</string>
    <string name="MID_ALLERT_BEFORE_8MP_DOWNLOAD">Using the camera to record or view videos may interrupt download. Check camera status.</string>
    <string name="MID_APPROXIMATE">Approximate</string>
    <string name="MID_APPS_MV2_INFO">"The Nikon Manual Viewer 2 viewer app can be used to download and view manuals for Nikon digital SLR cameras.
Downloading the manual for your camera gives you the security of knowing that you can view it anywhere, anytime, online or off."</string>
    <string name="MID_APPS_MV2_NAME">Manual Viewer 2</string>
    <string name="MID_APPS_NIS_INFO">This free app for Nikon’s NIKON IMAGE SPACE photo sharing service brings your photos closer and enhances your post-shooting enjoyment. It is devoted to three simple features—viewing, organizing, and sharing photos—that will make the lives of photo lovers everywhere more convenient, pleasant, and streamlined.</string>
    <string name="MID_APPS_NIS_NAME">NIKON IMAGE SPACE</string>
    <string name="MID_APP_CD_COLOR_LIST_BLACK">Black</string>
    <string name="MID_APP_CD_COLOR_LIST_BLUE">Blue</string>
    <string name="MID_APP_CD_COLOR_LIST_BROWN">Brown</string>
    <string name="MID_APP_CD_COLOR_LIST_DARKGRAY">Dark gray</string>
    <string name="MID_APP_CD_COLOR_LIST_WHITE">White</string>
    <string name="MID_APP_CD_COLOR_TITLE">Color</string>
    <string name="MID_APP_CD_CREDIT_ADD">Add credits</string>
    <string name="MID_APP_CD_CREDIT_NOTE">Embed shooting information or comments in images.</string>
    <string name="MID_APP_CD_CREDIT_POSITION">Position</string>
    <string name="MID_APP_CD_CREDIT_PREV">Preview</string>
    <string name="MID_APP_CD_CREDIT_TYPE">Type</string>
    <string name="MID_APP_CD_FONT_LIST_BOLD">Bold</string>
    <string name="MID_APP_CD_FONT_LIST_ITALIC">Italic</string>
    <string name="MID_APP_CD_FONT_LIST_NORMAL">Regular</string>
    <string name="MID_APP_CD_FONT_TITLE">Style</string>
    <string name="MID_APP_CD_POS_LEFT_BOTTOM">Bottom left</string>
    <string name="MID_APP_CD_POS_LEFT_TOP">Top left</string>
    <string name="MID_APP_CD_POS_RIGHT_BOTTOM">Bottom right</string>
    <string name="MID_APP_CD_POS_RIGHT_TOP">Top right</string>
    <string name="MID_APP_CD_SIZE_LIST_BIG">Large</string>
    <string name="MID_APP_CD_SIZE_LIST_MIDDLE">Medium</string>
    <string name="MID_APP_CD_SIZE_LIST_SMALL">Small</string>
    <string name="MID_APP_CD_SIZE_TITLE">Size</string>
    <string name="MID_APP_CD_TEXT_TITLE">Enter description</string>
    <string name="MID_APP_CD_TYPE_PHOTOINFO_LIST_COMMENT">Image Comment</string>
    <string name="MID_APP_CD_TYPE_PHOTOINFO_LIST_DATE">Time shot</string>
    <string name="MID_APP_CD_TYPE_PHOTOINFO_LIST_INDEX">File/photo info</string>
    <string name="MID_APP_CD_TYPE_PHOTOINFO_LIST_LIST_INFO">Photo information</string>
    <string name="MID_APP_CD_TYPE_PHOTOINFO_LIST_PHOTOGRAPHER_AND_COPYRIGHT">Photographer/copyright holder</string>
    <string name="MID_APP_CD_TYPE_TITLE">Credit type</string>
    <string name="MID_APP_CD_TYPE_USER_SETTING_LIST_COMMENT">Comment</string>
    <string name="MID_APP_CD_TYPE_USER_SETTING_LIST_SNAPBRIDGE_LOGO">SnapBridge logo</string>
    <string name="MID_APP_CD_USER_SETTING_TITLE">User setting</string>
    <string name="MID_APP_CREDIT">Show credits</string>
    <string name="MID_APP_HASH">Add hashtag</string>
    <string name="MID_APP_NIKONID_SETTING">Nikon ID sign up/edit profile</string>
    <string name="MID_APP_PRIVACY_POLICY">Privacy Policy</string>
    <string name="MID_APP_PRIVACY_POLICY_CHECK">Accept the terms of the Privacy Policy</string>
    <string name="MID_APP_PRIVACY_POLICY_DESC">Read the Privacy Policy governing the handling of app user data.</string>
    <string name="MID_APP_SUPPORT_SITE">Support</string>
    <string name="MID_APP_TERMS_OF_USE">License Agreement</string>
    <string name="MID_APP_TERMS_OF_USE_AGREEMENT_CHECK">Accept the Application License Agreement</string>
    <string name="MID_APP_TERMS_OF_USE_CHECK_MSG">Please read the License Agreement.</string>
    <string name="MID_APP_TERMS_OF_USE_CHECK_MUST_READ_MSG">Read License Agreement (Required)</string>
    <string name="MID_APP_TERMS_OF_USE_DESC">For information on Terms of Service and other agreements for the various services involved in using this app, see “License Agreement”.</string>
    <string name="MID_APP_TERMS_OF_USE_DESC_TERMS_OF_USE">License Agreement</string>
    <string name="MID_ASK_BLUR">Motion: How do you want to express motion?</string>
    <string name="MID_ASK_BOKEH">Bokeh/depth of field: Do you want to soften backgrounds?</string>
    <string name="MID_AUTOLINK_CAMERA_CONNECTION_MODE_CHANGE_MESSAGE">The auto link connection type has changed with updates to the camera firmware and settings must now be updated.</string>
    <string name="MID_AUTOLINK_CAMERA_CONNECTION_MODE_CHANGE_MESSAGE_SYNCOFF">The connection type for link mode has changed with updates to the camera firmware and the options in the link mode display have been updated.</string>
    <string name="MID_AUTOLINK_CAMERA_CONNECTION_MODE_CHANGE_TITLE">Connection Type Change</string>
    <string name="MID_AUTOLINK_CHANGE_FAILED">Settings update failed</string>
    <string name="MID_AUTOLINK_CHANGE_FAILED_TEXT">Check that Bluetooth is enabled on the camera and try again.</string>
    <string name="MID_AUTOLINK_CHANGE_SUCCEEDED">Settings updated</string>
    <string name="MID_AUTOLINK_CHANGING_CONFORMATION_BUTTON">Proceed</string>
    <string name="MID_AUTOLINK_CHANGING_CONFORMATION_MESSAGE">Camera settings must be changed to permit use of the “background” link mode. Proceed?</string>
    <string name="MID_AUTOLINK_MODE">Link mode</string>
    <string name="MID_AUTOLINK_MODE_BACKGROUND">Background</string>
    <string name="MID_AUTOLINK_MODE_BACKGROUND_DISCRIPTION">"Link to the camera even when your smart device is in sleep mode. Location data will be added to the pictures on the camera before download.
The app will connect to the camera when this mode is selected."</string>
    <string name="MID_AUTOLINK_MODE_CHANGNG">Updating settings…</string>
    <string name="MID_AUTOLINK_MODE_FOREGROUND">Foreground</string>
    <string name="MID_AUTOLINK_MODE_FOREGROUND_DISCRIPTION">"Link to the camera while the app is running. Location data will be added to pictures only after download.
The drain on the camera battery is reduced."</string>
    <string name="MID_AUTOLINK_MODE_FOREGROUND_SAVING">Foreground</string>
    <string name="MID_AUTOLINK_SIZE">Download size</string>
    <string name="MID_AUTOLINK_TIME_DISCRIPTION">The clock on the camera will be set to the time and time zone on the smart device.</string>
    <string name="MID_AUTO_TRANSFER_WIFI">Auto download (Wi-Fi)</string>
    <string name="MID_BACK_TO_HOME">Back to settings bank list</string>
    <string name="MID_BLE_REMOTE_ALERT_CANT_MOVIE">Ready camera for video recording</string>
    <string name="MID_BLE_REMOTE_ALERT_CANT_REMOTE">Cannot complete operation. Check camera settings.</string>
    <string name="MID_BLE_REMOTE_ALERT_CANT_START_REMOTE">Remote control not available</string>
    <string name="MID_BLE_REMOTE_ALERT_CANT_START_REMOTE_BY_CAMERA">Remote control not available. Check camera status.</string>
    <string name="MID_BLE_REMOTE_ALERT_CANT_STILL">Ready camera to take photographs</string>
    <string name="MID_BLE_REMOTE_ALERT_CAN_START_AFTER_FINISH_SENDING">Remote control will begin when download is complete.</string>
    <string name="MID_BLE_REMOTE_BULBE_SHOOTING">Bulb photography in progress</string>
    <string name="MID_BLE_REMOTE_CAMERA_STATE_ERROR">Check camera settings.</string>
    <string name="MID_BUTTON_GO_TO_CHUTORIAL">View tutorials</string>
    <string name="MID_CANCEL">Cancel</string>
    <string name="MID_CHOICE_USE_NIS_NO">Not now</string>
    <string name="MID_CHOICE_USE_NIS_YES">Use</string>
    <string name="MID_CLD_START">Start</string>
    <string name="MID_COMMON_HELP">Help</string>
    <string name="MID_CREATE_SET">New Settings Bank</string>
    <string name="MID_CREATE_SET_TIP">Tap this button to create a new settings bank</string>
    <string name="MID_DELETE">Delete</string>
    <string name="MID_EDIT">Adjust settings</string>
    <string name="MID_NO_SET">No settings banks available. Tap the button below at right to create one.</string>
    <string name="MID_PRIVACY_POLICY_CHECK_MUST_READ_MSG">Read Privacy policy (Required)</string>
    <string name="MID_RENAME">Rename</string>
    <string name="MID_SEND_ANOTHER">Create another settings bank</string>
    <string name="MID_SEND_SET_TO_CAMERA">Upload to camera</string>
    <string name="MID_SET_FINISHED">Settings saved</string>
    <string name="MID_SET_FINISHED_DESC">Try uploading the settings to your camera and taking some pictures.</string>
    <string name="MID_SORT">Sort</string>
    <string name="MID_SORT_NAME_DOWN">Sort by name (descending)</string>
    <string name="MID_SORT_NAME_UP">Sort by name (ascending)</string>
    <string name="MID_SORT_NEW">Newest first</string>
    <string name="MID_SORT_OLD">Oldest first</string>
    <string name="MID_SORT_USE_LATELY">Last used</string>
    <string name="MID_SORT_USE_MANY">Most used</string>
    <string name="MID_USE_NIS_MSG_1">"You can use “NIKON IMAGE SPACE”, a Nikon's image storage service."</string>
    <string name="MID_USE_NIS_MSG_2">Images downloaded to your smart device can be uploaded to NIKON IMAGE SPACE.</string>
    <string name="MID_USE_NIS_MSG_3">Tap \"Use\" and log in if you have already signed up for NIKON IMAGE SPACE.</string>
    <string name="app_name">SnapBridge</string>
</resources>