<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/u2220_bg_gray" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.Toolbar android:id="@id/toolbar" android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="56.0dip" app:layout_constraintTop_toTopOf="parent">
        <TextView android:textSize="18.0dip" android:textColor="@color/u2220_white" android:ellipsize="end" android:gravity="center_vertical" android:id="@id/title" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/MID_SORT" android:maxLines="2" android:layout_marginStart="32.0dip" android:layout_marginEnd="32.0dip" />
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout android:id="@id/sort_layout" android:layout_width="fill_parent" android:layout_height="0.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@id/toolbar" app:layout_constraintVertical_bias="0.0">
        <RadioGroup android:orientation="vertical" android:id="@id/sort_RadioGroup_layout" android:background="#ff242424" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:divider="@drawable/shape_sort_radio_button" android:showDividers="middle" app:layout_constraintBottom_toBottomOf="parent">
            <RadioButton android:textSize="15.0dip" android:textColor="@color/u2220_white" android:id="@id/button_sort_created_date_new" android:layout_width="fill_parent" android:layout_height="44.0dip" android:text="@string/MID_SORT_NEW" android:paddingStart="12.0dip" android:layout_marginStart="16.0dip" style="@style/AndroidRadioButtonStyle" />
            <RadioButton android:textSize="15.0dip" android:textColor="@color/u2220_white" android:id="@id/button_sort_created_date_old" android:layout_width="fill_parent" android:layout_height="44.0dip" android:text="@string/MID_SORT_OLD" android:paddingStart="12.0dip" android:layout_marginStart="16.0dip" style="@style/AndroidRadioButtonStyle" />
            <RadioButton android:textSize="15.0dip" android:textColor="@color/u2220_white" android:id="@id/button_sort_use_many" android:layout_width="fill_parent" android:layout_height="44.0dip" android:text="@string/MID_SORT_USE_MANY" android:paddingStart="12.0dip" android:layout_marginStart="16.0dip" style="@style/AndroidRadioButtonStyle" />
            <RadioButton android:textSize="15.0dip" android:textColor="@color/u2220_white" android:id="@id/button_sort_use_lately" android:layout_width="fill_parent" android:layout_height="44.0dip" android:text="@string/MID_SORT_USE_LATELY" android:paddingStart="12.0dip" android:layout_marginStart="16.0dip" style="@style/AndroidRadioButtonStyle" />
            <RadioButton android:textSize="15.0dip" android:textColor="@color/u2220_white" android:id="@id/button_sort_name_up" android:layout_width="fill_parent" android:layout_height="44.0dip" android:text="@string/MID_SORT_NAME_UP" android:paddingStart="12.0dip" android:layout_marginStart="16.0dip" style="@style/AndroidRadioButtonStyle" />
            <RadioButton android:textSize="15.0dip" android:textColor="@color/u2220_white" android:id="@id/button_sort_name_down" android:layout_width="fill_parent" android:layout_height="44.0dip" android:text="@string/MID_SORT_NAME_DOWN" android:paddingStart="12.0dip" android:layout_marginStart="16.0dip" style="@style/AndroidRadioButtonStyle" />
        </RadioGroup>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
