<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/button_title" android:background="@null" android:layout_width="fill_parent" android:layout_height="77.0dip">
        <TextView android:textSize="@dimen/fsize_24dp" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_16dp" android:layout_marginTop="@dimen/dimen_24dp" android:layout_marginRight="@dimen/dimen_16dp" android:text="@string/app_name" />
    </RelativeLayout>
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/button_area" android:layout_below="@id/button_title">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/fsize_14dp" android:textColor="@color/white" android:id="@id/text_describe_app" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/MID_APP_TERMS_OF_USE_DESC" android:layout_marginStart="@dimen/dimen_16dp" android:layout_marginEnd="@dimen/dimen_16dp" />
            <TextView android:textSize="@dimen/fsize_16dp" android:textColor="@color/yellow" android:gravity="start|center" android:id="@id/text_read_eula" android:background="@color/_323232" android:paddingTop="@dimen/dimen_12dp" android:paddingBottom="@dimen/dimen_12dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/MID_APP_TERMS_OF_USE_CHECK_MUST_READ_MSG" android:paddingStart="@dimen/dimen_20dp" android:paddingEnd="@dimen/dimen_20dp" android:paddingVertical="@dimen/dimen_12dp" />
            <TextView android:enabled="false" android:textSize="@dimen/fsize_15dp" android:textColor="@color/_646464" android:gravity="start|center" android:id="@id/text_check_app_agree" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_44dp" android:text="@string/MID_APP_TERMS_OF_USE_AGREEMENT_CHECK" android:drawablePadding="@dimen/dimen_14dp" android:drawableStart="@drawable/btn_check_license2" android:paddingStart="@dimen/dimen_16dp" android:paddingEnd="@dimen/dimen_16dp" />
            <TextView android:textSize="@dimen/fsize_14dp" android:textColor="@color/white" android:id="@id/text_describe_privacy_policy" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_40dp" android:text="@string/MID_APP_PRIVACY_POLICY_DESC" android:layout_marginStart="@dimen/dimen_16dp" android:layout_marginEnd="@dimen/dimen_16dp" />
            <TextView android:textSize="@dimen/fsize_16dp" android:textColor="@color/yellow" android:gravity="start|center" android:id="@id/text_read_privacy_policy" android:background="@color/_323232" android:paddingTop="@dimen/dimen_12dp" android:paddingBottom="@dimen/dimen_12dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/MID_PRIVACY_POLICY_CHECK_MUST_READ_MSG" android:paddingStart="@dimen/dimen_20dp" android:paddingEnd="@dimen/dimen_20dp" android:paddingVertical="@dimen/dimen_12dp" />
            <TextView android:enabled="false" android:textSize="@dimen/fsize_15dp" android:textColor="@color/_646464" android:gravity="start|center" android:id="@id/text_check_privacy_policy_agree" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_44dp" android:text="@string/MID_APP_PRIVACY_POLICY_CHECK" android:drawablePadding="@dimen/dimen_14dp" android:drawableStart="@drawable/btn_check_license2" android:paddingStart="@dimen/dimen_16dp" android:paddingEnd="@dimen/dimen_16dp" />
        </LinearLayout>
    </ScrollView>
    <RelativeLayout android:id="@id/button_area" android:background="@null" android:layout_width="fill_parent" android:layout_height="96.0dip" android:layout_alignParentBottom="true">
        <Button android:enabled="false" android:textSize="@dimen/fsize_14dp" android:textStyle="bold" android:textColor="@color/btn_text_white" android:ellipsize="end" android:id="@id/button_start" android:background="@drawable/btn_blank1" android:layout_width="@dimen/dimen_260dp" android:layout_height="@dimen/dimen_48dp" android:layout_marginTop="@dimen/dimen_24dp" android:text="@string/MID_CLD_START" android:lines="2" android:layout_centerHorizontal="true" android:textAllCaps="false" />
    </RelativeLayout>
</RelativeLayout>
