<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/_0d0d0d" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/image" android:layout_width="0.0dip" android:layout_height="wrap_content" android:src="@drawable/cloud_tab_se_illust" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <ScrollView android:paddingLeft="24.0dip" android:paddingRight="24.0dip" android:layout_width="0.0dip" android:layout_height="0.0dip" android:paddingHorizontal="24.0dip" app:layout_constraintBottom_toTopOf="@id/button_area" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/image">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/dimen_20dp" android:textColor="@color/_f5f5f5" android:gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/MID_USE_NIS_MSG_1" />
            <TextView android:textSize="@dimen/dimen_17dp" android:textColor="@color/_c8c8c8" android:gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/MID_USE_NIS_MSG_2" />
            <TextView android:textSize="@dimen/dimen_17dp" android:textColor="@color/_c8c8c8" android:gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/MID_USE_NIS_MSG_3" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:orientation="vertical" android:id="@id/button_area" android:layout_width="0.0dip" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent">
        <Button android:textSize="@dimen/fsize_14dp" android:textStyle="bold" android:textColor="@color/btn_text_white" android:ellipsize="end" android:layout_gravity="center_horizontal" android:id="@id/use_button" android:background="@drawable/btn_blank1" android:layout_width="260.0dip" android:layout_height="48.0dip" android:layout_marginTop="26.0dip" android:layout_marginBottom="24.0dip" android:text="@string/MID_CHOICE_USE_NIS_YES" android:lines="2" android:textAllCaps="false" />
        <TextView android:textSize="@dimen/dimen_14dp" android:textColor="@color/_c8c8c8" android:layout_gravity="center_horizontal" android:id="@id/not_use_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="24.0dip" android:foreground="@drawable/btn_blank0" android:maxWidth="260.0dip" android:text="@string/MID_CHOICE_USE_NIS_NO" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
