<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/u2220_bg_gray" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.Toolbar android:id="@id/toolbar" android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="56.0dip" app:layout_constraintTop_toTopOf="parent">
        <TextView android:textSize="18.0dip" android:textColor="@color/u2220_white" android:ellipsize="end" android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/MID_CREATE_SET" android:maxLines="2" android:layout_marginStart="32.0dip" />
    </androidx.appcompat.widget.Toolbar>
    <androidx.constraintlayout.widget.ConstraintLayout android:orientation="vertical" android:id="@id/my_shoot_setting_select_layout" android:background="@drawable/bg_gradation" android:layout_width="fill_parent" android:layout_height="0.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@id/toolbar">
        <ImageView android:id="@id/create_setting_imageView" android:background="@drawable/setting_create_finish" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="68.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="20.0dip" android:textColor="@color/u2220_white" android:id="@id/setting_finish_textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/MID_SET_FINISHED" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/create_setting_imageView" />
        <TextView android:textSize="17.0dip" android:textColor="@android:color/white" android:gravity="center" android:id="@id/apply_setting_shot_textView" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:text="@string/MID_SET_FINISHED_DESC" android:layout_marginStart="40.0dip" android:layout_marginEnd="40.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/setting_finish_textView" />
        <Button android:textSize="@dimen/u2220_myshootsettingcreatefinish_button_fontsize" android:textColor="@color/u2220_common_button_color" android:id="@id/send_to_camera_btn" android:background="@drawable/u2220_common_button" android:layout_width="@dimen/u2220_common_button_width" android:layout_height="@dimen/u2220_common_button_height" android:layout_marginTop="54.0dip" android:text="@string/MID_SEND_SET_TO_CAMERA" android:textAllCaps="false" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/apply_setting_shot_textView" />
        <Button android:textSize="@dimen/u2220_myshootsettingcreatefinish_button_fontsize" android:textColor="@color/u2220_common_button_color" android:id="@id/create_other_setting_btn" android:background="@drawable/u2220_common_button" android:layout_width="@dimen/u2220_common_button_width" android:layout_height="@dimen/u2220_common_button_height" android:layout_marginTop="24.0dip" android:text="@string/MID_SEND_ANOTHER" android:textAllCaps="false" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/send_to_camera_btn" />
        <Button android:textSize="@dimen/u2220_myshootsettingcreatefinish_button_fontsize" android:textColor="@color/u2220_common_button_color" android:gravity="center" android:id="@id/return_home_btn" android:background="@drawable/u2220_common_button" android:layout_width="@dimen/u2220_common_button_width" android:layout_height="@dimen/u2220_common_button_height" android:layout_marginTop="24.0dip" android:text="@string/MID_BACK_TO_HOME" android:textAllCaps="false" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/create_other_setting_btn" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
