<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/u2220_bg_gray" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
            <androidx.appcompat.widget.Toolbar android:gravity="center" android:orientation="horizontal" android:id="@id/toolbar" android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="56.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
                <ImageView android:layout_gravity="end" android:id="@id/home_help_btn" android:layout_width="24.0dip" android:layout_height="24.0dip" android:src="@drawable/help_button_icon" android:contentDescription="@string/MID_COMMON_HELP" android:layout_marginEnd="16.0dip" />
                <ImageView android:layout_gravity="end" android:id="@id/home_sort_btn" android:layout_width="24.0dip" android:layout_height="24.0dip" android:src="@drawable/sort_icon" android:contentDescription="@string/MID_SORT" android:layout_marginEnd="16.0dip" />
            </androidx.appcompat.widget.Toolbar>
            <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/my_shoot_setting_empty_layout" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_constraintTop_toBottomOf="@id/toolbar">
                <ImageView android:id="@id/imageView" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginTop="104.0dip" android:src="@drawable/setting_illust" android:scaleType="fitCenter" app:layout_constraintDimensionRatio="h,360:342" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
                <TextView android:textSize="17.0dip" android:textColor="@color/u2220_white" android:gravity="center" android:id="@id/list_empty_text" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/MID_NO_SET" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/imageView" />
                <Button android:textSize="@dimen/fsize_14dp" android:textColor="@color/u2220_common_button_color" android:id="@id/tutorial_btn" android:background="@drawable/shape_u2220_white_border_layout" android:layout_width="154.0dip" android:layout_height="36.0dip" android:layout_marginTop="20.0dip" android:text="@string/MID_BUTTON_GO_TO_CHUTORIAL" android:textAllCaps="false" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/list_empty_text" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.recyclerview.widget.RecyclerView android:id="@id/recycler_view" android:layout_width="fill_parent" android:layout_height="0.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/toolbar" />
            <FrameLayout android:id="@id/home_tip_overlay" android:background="#ae000000" android:layout_width="fill_parent" android:layout_height="fill_parent" />
            <LinearLayout android:gravity="right" android:orientation="vertical" android:id="@id/home_tip_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintBottom_toTopOf="@id/create_btn_layout">
                <TextView android:textSize="17.0dip" android:textColor="@color/u2220_white" android:gravity="center_vertical" android:id="@id/home_tip" android:background="@drawable/tip" android:paddingTop="0.0dip" android:paddingBottom="14.0dip" android:layout_width="264.0dip" android:layout_height="wrap_content" android:layout_marginRight="48.0dip" android:layout_marginBottom="12.0dip" android:text="@string/MID_CREATE_SET_TIP" android:paddingStart="30.0dip" android:paddingEnd="30.0dip" />
            </LinearLayout>
            <LinearLayout android:gravity="end|center" android:orientation="vertical" android:id="@id/create_btn_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent">
                <ImageView android:id="@id/create_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:src="@drawable/add_parts" android:contentDescription="@string/MID_CREATE_SET" android:layout_marginEnd="16.0dip" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
